# lean_grpo

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
configs/: algebra_domain.yaml  dapo.yaml  dapo_expert.yaml  default.yaml  dgpo_preferences.yaml  drgrpo.yaml  drgrpo_rank.yaml  grpo_aggressive.yaml  grpo_basic.yaml  grpo_conservative.yaml  gspo.yaml  gspo_multi_gpu.yaml  hard_problems.yaml
docs/: QUICK_REFERENCE.md  REPO_GUIDE.md  REWARDS.md
examples/: example_theorems.jsonl  lean_grpo_tutorial.ipynb  train_advanced.py  train_domain_specific.py  train_example.py  train_with_rewards.py
src/lean_grpo/: __init__.py  cli.py  inference_client.py  lean_interface.py  reward.py  rollout.py  trainer.py  trajectory.py
src/lean_grpo/algorithms/: __init__.py  base.py  dapo.py  dgrpo.py  drgrpo.py  grpo.py  gspo.py
src/lean_grpo/rewards/: __init__.py  base.py  composite.py  difficulty.py  domain.py  efficiency.py  registry.py
tests/: test_algorithms.py  test_lean_interface.py  test_trajectory.py
