[project]
name = "lean-grpo"
version = "0.1.0"
description = "GRPO training pipeline for Lean 4 proof generation with partial rewards"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "User", email = "user@example.com"}
]
keywords = ["lean4", "grpo", "rl", "theorem-proving", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.4.0",
    "transformers>=4.45.0",
    "trl>=0.15.0",
    "unsloth>=2025.1.0",
    "vllm>=0.6.0",
    "datasets>=2.21.0",
    "accelerate>=1.0.0",
    "peft>=0.13.0",
    "openai>=1.45.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "aiofiles>=24.0.0",
    "tqdm>=4.66.0",
    "wandb>=0.18.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
    "typer>=0.12.0",
    "rich>=13.8.0",
    "pexpect>=4.9.0",
    "jsonlines>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
lean-grpo = "lean_grpo.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
